# run

./: README.md  pyproject.toml
examples/: count_chain.env.yaml  count_chain.workflow.yaml  data_flow.env.yaml  data_flow.workflow.yaml  plate_chain.document.yaml  plate_chain.env.yaml  plate_chain.workflow.yaml  render_data_flow.py  render_job_run.py  render_plate_chain.py  render_poll_drift.py  render_reroute.py  reroute.env.yaml  reroute.workflow.yaml
examples/outputs/: data_flow.trace.txt  job_run.boundary.yaml  job_run.outputs.yaml  job_run.trace.txt  plate_chain.boundary.yaml  plate_chain.outputs.yaml  plate_chain.trace.txt
ofplang/run/: __init__.py  __main__.py  cli.py
ofplang/run/runner/: __init__.py  boundary.py  contracts.py  dataflow.py  loader.py  provenance.py  rolling.py  runner.py  schedule_client.py  status.py  values.py
ofplang/run/simulator/: __init__.py  core.py  environment.py  errors.py
tests/: test_boundary.py  test_cli.py  test_contracts.py  test_data_values.py  test_dataflow.py  test_failure.py  test_poll_interval.py  test_pure_data.py  test_reroute.py  test_rolling.py  test_runner.py  test_simulator.py  test_variance.py
tests/fixtures/: count_chain.workflow.yaml  failure.env.yaml  failure.workflow.yaml  interface_load.boundary.yaml  interface_load.document.yaml  interface_load.env.yaml  interface_load.workflow.yaml  literal_chain.env.yaml  literal_chain.workflow.yaml  nested_returns.workflow.yaml  pure_data.document.yaml  pure_data.plan.yaml  pure_data.workflow.yaml  reroute.env.yaml  simple.env.yaml  simple.workflow.yaml  simple_no_target.env.yaml  typed_returns.workflow.yaml
