[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ofplang-run"
version = "0.0.0"
description = "Object-flow programming language v0 runner"
requires-python = ">=3.10"
# `ofplang-schedule` is a local sibling repo (not published); install it editable
# alongside this one: `pip install -e ../ofplang-schedule`. The rolling-horizon
# runner (`ofp-run run`) calls it in-process; `ofp-run replay` does not need it.
dependencies = ["PyYAML>=6.0", "ofplang-schedule"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
# Standalone command; the umbrella `ofp` CLI (separate repo) exposes this as
# `ofp run`.
ofp-run = "ofplang.run.cli:main"

# `ofplang` is a PEP 420 namespace shared across the org's repos (validate,
# schedule, run, …); this distribution provides only the `ofplang.run` package
# under it.
[tool.setuptools.packages.find]
include = ["ofplang*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
